--- a/index.html
+++ b/index.html
@@ -517,9 +517,9 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
-                        <img class="img-fluid rounded" src="img/team-1.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/team-1.jpeg" alt="">
                         <div class="team-text">
-                            <h4 class="mb-0">Mayank Chaturvedy</h4>
+                            <h4 class="mb-0">Aman Bansal</h4>
                             <div class="team-social d-flex">
                                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square rounded-circle mx-1" href=""><i class="fab fa-twitter"></i></a>
@@ -530,7 +530,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item">
-                        <img class="img-fluid rounded" src="img/team-2.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/team-3.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Parul Chawla</h4>
                             <div class="team-social d-flex">
@@ -543,7 +543,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item">
-                        <img class="img-fluid rounded" src="img/team-3.jpg" alt="">
+                        <img class="img-fluid rounded" src="img/team-2.jpeg" alt="">
                         <div class="team-text">
                             <h4 class="mb-0">Harsh Mittal</h4>
                             <div class="team-social d-flex">
